--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+    <div class="content"></div>
     <h1>Teste</h1>
 
     
